added makefile, fixed warning